navbar peters fix

--- a/index.html
+++ b/index.html
@@ -10,9 +10,253 @@
         type="image/svg+xml">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/index.css">
+    <style>
+        .navbar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(135deg, rgba(15, 23, 42, 0.98), rgba(30, 41, 59, 0.98));
+            backdrop-filter: blur(20px);
+            border-bottom: 1px solid rgba(59, 130, 246, 0.3);
+            z-index: 1000;
+            padding: 0;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .navbar-container {
+            max-width: 1400px;
+            margin: 0 auto;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 40px;
+            padding: 0 30px;
+            position: relative;
+        }
+
+        .navbar-brand {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            color: white;
+            text-decoration: none;
+            font-weight: 700;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        .navbar-brand:hover {
+            transform: translateY(-2px);
+        }
+
+        .navbar-brand::after {
+            content: '';
+            position: absolute;
+            bottom: -5px;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(90deg, #3B82F6, #60A5FA);
+            transition: width 0.3s ease;
+        }
+
+        .navbar-brand:hover::after {
+            width: 100%;
+        }
+
+        .navbar-nav {
+            display: flex;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            gap: 3px;
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 50px;
+            padding: 3px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .nav-item {
+            margin: 0;
+        }
+
+        .nav-link {
+            color: rgba(255, 255, 255, 0.8);
+            text-decoration: none;
+            padding: 6px 14px;
+            display: block;
+            transition: all 0.3s ease;
+            font-weight: 600;
+            border-radius: 25px;
+            position: relative;
+            overflow: hidden;
+            font-size: 0.85rem;
+            letter-spacing: 0.5px;
+        }
+
+        .nav-link::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(59, 130, 246, 0.1), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .nav-link:hover::before {
+            left: 100%;
+        }
+
+        .nav-link:hover {
+            color: white;
+            background: rgba(59, 130, 246, 0.15);
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(59, 130, 246, 0.2);
+        }
+
+        .nav-link.active {
+            color: white;
+            background: linear-gradient(135deg, #3B82F6, #60A5FA);
+            box-shadow: 0 4px 20px rgba(59, 130, 246, 0.4);
+            transform: translateY(-2px);
+        }
+
+        .nav-link.active:hover {
+            background: linear-gradient(135deg, #60A5FA, #3B82F6);
+            transform: translateY(-3px);
+            box-shadow: 0 6px 25px rgba(59, 130, 246, 0.5);
+        }
+
+        /* Adjust main content for navbar */
+        .container {
+            margin-top: 40px;
+            height: calc(100vh - 40px);
+            overflow: hidden;
+        }
+
+        .sidebar {
+            top: 40px;
+            height: calc(100vh - 40px);
+            z-index: 999;
+        }
+
+        .teams-list {
+            height: calc(100vh - 110px); /* 70px header + 40px navbar */
+        }
+
+        .team-item {
+            height: calc((100vh - 110px) / 18);
+        }
+
+        /* Mobile responsive navbar */
+        @media (max-width: 1024px) {
+            .navbar-container {
+                padding: 0 20px;
+            }
+
+            .navbar-brand {
+                font-size: 0.95rem;
+            }
+
+            .nav-link {
+                padding: 5px 12px;
+                font-size: 0.8rem;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .navbar {
+                height: 35px;
+            }
+
+            .navbar-container {
+                height: 35px;
+                padding: 0 15px;
+            }
+
+            .navbar-brand {
+                font-size: 0.9rem;
+                gap: 8px;
+            }
+
+            .navbar-nav {
+                gap: 2px;
+                padding: 2px;
+            }
+
+            .nav-link {
+                padding: 4px 10px;
+                font-size: 0.75rem;
+            }
+
+            .container {
+                margin-top: 35px;
+                height: calc(100vh - 35px);
+            }
+
+            .sidebar {
+                top: 35px;
+                height: calc(100vh - 35px);
+            }
+
+            .teams-list {
+                height: calc(100vh - 105px);
+            }
+
+            .team-item {
+                height: calc((100vh - 105px) / 18);
+            }
+        }
+
+        @media (max-width: 480px) {
+            .navbar-container {
+                padding: 0 10px;
+            }
+
+            .navbar-brand {
+                font-size: 0.8rem;
+                gap: 6px;
+            }
+
+            .navbar-nav {
+                gap: 1px;
+                padding: 1px;
+            }
+
+            .nav-link {
+                padding: 3px 8px;
+                font-size: 0.7rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
+    <!-- Navigation Bar -->
+    <nav class="navbar">
+        <div class="navbar-container">
+            <a href="index.html" class="navbar-brand">
+                <span>Trendyol Süper Lig</span>
+            </a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link active">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="lineup.html" class="nav-link">Lineup</a>
+                </li>
+                <li class="nav-item">
+                    <a href="fixture.html" class="nav-link">Fixture</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <button class="menu-toggle">☰</button>
     <div class="container">
         <div class="sidebar">
