--- a/lineup.html
+++ b/lineup.html
@@ -182,6 +182,160 @@
             .container {
                 margin-top: 35px;
                 height: calc(100vh - 35px);
+                flex-direction: column;
+                gap: 10px;
+                padding: 10px;
+            }
+
+            .left-panel {
+                width: 100%;
+                height: auto;
+                max-height: 40vh;
+                order: 2;
+            }
+
+            .right-panel {
+                order: 1;
+                min-height: 50vh;
+            }
+
+            .team-selector {
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .team-selector select {
+                width: 100%;
+                font-size: 0.9rem;
+            }
+
+            .formation-controls {
+                flex-direction: column;
+                gap: 8px;
+            }
+
+            .formation-select {
+                width: 100%;
+                font-size: 0.9rem;
+            }
+
+            .clear-btn {
+                width: 100%;
+                font-size: 0.9rem;
+            }
+
+            .cards-container {
+                max-height: 25vh;
+            }
+
+            .cards-grid {
+                grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+                gap: 8px;
+            }
+
+            .player-card {
+                min-height: 120px;
+            }
+
+            .field-container {
+                min-height: 400px;
+            }
+
+            .center-circle {
+                width: 100px;
+                height: 100px;
+            }
+
+            .penalty-area-top,
+            .penalty-area-bottom {
+                width: 70%;
+                height: 20%;
+            }
+
+            .goal-area-top,
+            .goal-area-bottom {
+                width: 35%;
+                height: 10%;
+            }
+
+            #cardContainer .player-card {
+                transform: scale(0.7);
+            }
+
+            #cardContainer .player-card .player-image-container {
+                width: 40px;
+                height: 40px;
+            }
+
+            #cardContainer .player-card .player-info {
+                padding: 5px;
+            }
+
+            #cardContainer .player-card .player-name {
+                font-size: 0.7rem;
+                line-height: 1.2;
+            }
+
+            #cardContainer .player-card .rating-badge {
+                width: 25px;
+                height: 25px;
+                font-size: 0.6rem;
+            }
+
+            .formation-point {
+                width: 30px;
+                height: 30px;
+            }
+
+            .delete-button {
+                width: 20px;
+                height: 20px;
+                font-size: 0.6rem;
+            }
+
+            .bench-section {
+                order: 3;
+                margin-top: 10px;
+            }
+
+            .bench-positions {
+                grid-template-columns: repeat(5, 1fr);
+                gap: 8px;
+            }
+
+            .bench-slot {
+                min-height: 80px;
+            }
+
+            .bench-slot .player-card {
+                min-height: 80px;
+            }
+
+            .bench-slot .player-card .player-info .player-name {
+                font-size: 0.7rem;
+                line-height: 1.1;
+            }
+
+            .bench-slot .player-card .rating-badge {
+                width: 20px;
+                height: 20px;
+                font-size: 0.6rem;
+            }
+
+            .bench-slot .player-card .delete-button {
+                width: 18px;
+                height: 18px;
+                font-size: 0.5rem;
+            }
+
+            .mobile-manager-section {
+                display: block;
+                order: 4;
+                margin-top: 10px;
+            }
+
+            .field-container .manager-area {
+                display: none;
             }
         }
 
@@ -203,6 +357,168 @@
             .nav-link {
                 padding: 3px 8px;
                 font-size: 0.7rem;
+            }
+
+            .container {
+                padding: 8px;
+                gap: 8px;
+            }
+
+            .left-panel {
+                max-height: 35vh;
+                padding: 10px;
+            }
+
+            .right-panel {
+                min-height: 45vh;
+            }
+
+            .team-selector select {
+                font-size: 0.8rem;
+            }
+
+            .formation-select {
+                font-size: 0.8rem;
+            }
+
+            .clear-btn {
+                font-size: 0.8rem;
+            }
+
+            .cards-grid {
+                grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+                gap: 6px;
+            }
+
+            .player-card {
+                min-height: 100px;
+            }
+
+            .field-container {
+                min-height: 350px;
+            }
+
+            .center-circle {
+                width: 80px;
+                height: 80px;
+            }
+
+            .penalty-area-top,
+            .penalty-area-bottom {
+                width: 75%;
+                height: 18%;
+            }
+
+            .goal-area-top,
+            .goal-area-bottom {
+                width: 40%;
+                height: 8%;
+            }
+
+            #cardContainer .player-card {
+                transform: scale(0.6);
+            }
+
+            #cardContainer .player-card .player-image-container {
+                width: 35px;
+                height: 35px;
+            }
+
+            #cardContainer .player-card .player-name {
+                font-size: 0.65rem;
+            }
+
+            #cardContainer .player-card .rating-badge {
+                width: 22px;
+                height: 22px;
+                font-size: 0.55rem;
+            }
+
+            .formation-point {
+                width: 25px;
+                height: 25px;
+            }
+
+            .delete-button {
+                width: 18px;
+                height: 18px;
+                font-size: 0.55rem;
+            }
+
+            .bench-positions {
+                grid-template-columns: repeat(4, 1fr);
+                gap: 6px;
+            }
+
+            .bench-slot {
+                min-height: 70px;
+            }
+
+            .bench-slot .player-card {
+                min-height: 70px;
+            }
+
+            .bench-slot .player-card .player-info .player-name {
+                font-size: 0.65rem;
+            }
+
+            .bench-slot .player-card .rating-badge {
+                width: 18px;
+                height: 18px;
+                font-size: 0.55rem;
+            }
+
+            .bench-slot .player-card .delete-button {
+                width: 16px;
+                height: 16px;
+                font-size: 0.5rem;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .container {
+                padding: 5px;
+                gap: 5px;
+            }
+
+            .left-panel {
+                max-height: 30vh;
+                padding: 8px;
+            }
+
+            .right-panel {
+                min-height: 40vh;
+            }
+
+            .cards-grid {
+                grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+                gap: 5px;
+            }
+
+            .player-card {
+                min-height: 90px;
+            }
+
+            .field-container {
+                min-height: 300px;
+            }
+
+            .center-circle {
+                width: 70px;
+                height: 70px;
+            }
+
+            .bench-positions {
+                grid-template-columns: repeat(3, 1fr);
+                gap: 5px;
+            }
+
+            .bench-slot {
+                min-height: 60px;
+            }
+
+            .bench-slot .player-card {
+                min-height: 60px;
             }
         }
     </style>
