--- a/lineup.html
+++ b/lineup.html
@@ -28,6 +28,18 @@
                 <li class="nav-item">
                     <a href="fixture.html" class="nav-link">Fixture</a>
                 </li>
+                <li class="nav-item">
+                    <a href="stats.html" class="nav-link">Stats</a>
+                </li>
+                <li class="nav-item">
+                    <a href="standings.html" class="nav-link">Standings</a>
+                </li>
+                <li class="nav-item">
+                    <a href="results.html" class="nav-link">Results</a>
+                </li>
+                <li class="nav-item">
+                    <a href="news.html" class="nav-link">News</a>
+                </li>
             </ul>
         </div>
     </nav>
